--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": " ",
+  "name": "svbio",
   "version": "0.0.1",
   "description": "",
   "keywords": [
@@ -15,7 +15,9 @@
     "deploy": "gh-pages --dist dist"
   },
   "devDependencies": {
+    "cssnano": "^5.0.1",
     "gh-pages": "^3.1.0",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.5",
+    "postcss": "^8.2.10"
   }
 }
