--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "devDependencies": {
     "cssnano": "^5.0.1",
     "gh-pages": "^3.1.0",
-    "parcel-bundler": "^1.12.5",
+    "parcel": "^2.0.0-beta.2",
     "postcss": "^8.2.10"
-  }
+  },
+  "dependencies": {}
 }
