--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cssnano": "^5.0.1",
     "gh-pages": "^3.1.0",
     "parcel": "^2.0.0-beta.2",
+    "parcel-plugin-clean-dist": "0.0.6",
     "postcss": "^8.2.10"
   },
   "dependencies": {}
